# FFMepg_deocde

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  DNFFmpeg.cpp  DNFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/ffmpeg/: DNPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
